--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,13 +24,19 @@
 
 <div ng-include="'views/header.html'"></div>
 
-<div id="page-content">
-    <div ng-view></div>
+<div class="container-fluid">
+    <div class="col-sm-6 col-sm-offset-3" style="min-height: 575px;">
+        <div ng-view></div>
+    </div>
 </div>
+
 <div ng-include="'views/footer.html'"></div>
+
+
 <!-- build:js scripts/scripts.js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-i18n/angular-locale_es-es.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-resource/angular-resource.min.js"></script>
@@ -38,8 +44,14 @@
 <script src="bower_components/angular-notify/dist/angular-notify.min.js"></script>
 <script src="bower_components/modernizr/modernizr.js"></script>
 <script src="scripts/app.js"></script>
-<script src="scripts/controllers.js"></script>
-<script src="scripts/services.js"></script>
+<script src="scripts/welcomeCtrl.js"></script>
+<script src="scripts/pollCtrl.js"></script>
+<script src="scripts/thanksCtrl.js"></script>
+<script src="scripts/votesCtrl.js"></script>
+<script src="scripts/pollsCtrl.js"></script>
+<script src="scripts/pollService.js"></script>
+<script src="scripts/participantService.js"></script>
+
 <!-- endbuild -->
 </body>
 </html>
