Improvements: clean code and bug fixes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,8 +24,8 @@
 
 <div ng-include="'views/header.html'"></div>
 
-<div class="container-fluid">
-    <div class="col-sm-6 col-sm-offset-3" style="min-height: 575px;">
+<div class="container-fluid" style="min-height: 504px;">
+    <div class="col-sm-6 col-sm-offset-3">
         <div ng-view></div>
     </div>
 </div>
